--- a/03_push_swap/Makefile
+++ b/03_push_swap/Makefile
@@ -39,15 +39,15 @@ LIBFT = ft_atoi.c \
 		ft_printf.c \
 		get_next_line_bonus.c \
 		get_next_line_utils_bonus.c \
-		ft_lstadd_back_bonus.c \
-		ft_lstadd_front_bonus.c \
+		ft_lstadd_back.c \
+		ft_lstadd_before_bonus.c \
 		ft_lstclear_bonus.c \
 		ft_lstdelone_bonus.c \
 		ft_lstiter_bonus.c \
 		ft_lstlast_bonus.c \
-		ft_lstmap_bonus.c \
 		ft_lstnew_bonus.c \
 		ft_lstsize_bonus.c \
+		# ft_lstmap_bonus.c \
 
 LIBFT_DIR = ./0_LIBFT/
 
