--- a/03_push_swap/Makefile
+++ b/03_push_swap/Makefile
@@ -48,6 +48,7 @@ LIBFT = ft_atoi.c \
 		ft_lstlast_bonus.c \
 		ft_lstnew_bonus.c \
 		ft_lstsize_bonus.c \
+		ft_lstupdate.c \
 		# ft_lstmap_bonus.c \
 
 LSTUTILS =	pos_end.c \
