Trying to pass the address of string from client to server, #criminal

--- a/03_MiniTalk/Makefile
+++ b/03_MiniTalk/Makefile
@@ -1,71 +1,162 @@
-SERVER_MANDATORY = $(MANDATORY_DIR)server_sigaction.c
-CLIENT_MANDATORY = $(MANDATORY_DIR)client_sigaction.c
-SERVER_BONUS = $(BONUS_DIR)server_sigaction.c
-CLIENT_BONUS = $(BONUS_DIR)client_receptive.c
-SERVER_DEBUG = $(DEBUG_DIR)server_sigaction.c
-CLIENT_DEBUG = $(DEBUG_DIR)client_sigaction.c
+# ############################################################################ #
+#							# SOURCES DECLARATIONS #						   #
+# ############################################################################ #
 
-MANDATORY_FILES =	server_utils.c \
+SERVER_FILES = 	server_sigaction.c \
+				server_utils.c
 
-BONUS_FILES =	server_utils.c \
+CLIENT_FILES =	client_sigaction.c \
+				client_utils.c
+
+SERVER_BONUS_FILES =	server_sigaction.c \
+						server_utils.c
+
+CLIENT_BONUS_FILES = 	client_receptive.c \
+						client_utils.c
+
+SERVER_DEBUG_FILES = server_sigaction.c
+CLIENT_DEBUG_FILES = client_sigaction.c
+
+SERVER_CRIMINAL_FILES =	server_sigaction.c \
+						server_utils.c
+
+CLIENT_CRIMINAL_FILES =	client_receptive.c \
+						client_utils.c
+
+# ############################################################################ #
+#							# PATH DECLARATIONS #							   #
+# ############################################################################ #
+
+SERVER_MANDATORY = $(addprefix $(MANDATORY_DIR), $(SERVER_FILES))
+CLIENT_MANDATORY = $(addprefix $(MANDATORY_DIR), $(CLIENT_FILES))
+
+SERVER_BONUS = $(addprefix $(BONUS_DIR), $(SERVER_BONUS_FILES))
+CLIENT_BONUS = $(addprefix $(BONUS_DIR), $(CLIENT_BONUS_FILES))
+
+SERVER_DEBUG = $(addprefix $(DEBUG_DIR), $(SERVER_DEBUG_FILES))
+CLIENT_DEBUG = $(addprefix $(DEBUG_DIR), $(CLIENT_DEBUG_FILES))
+
+SERVER_CRIMINAL = $(addprefix $(CRIMINAL_DIR), $(SERVER_CRIMINAL_FILES))
+CLIENT_CRIMINAL = $(addprefix $(CRIMINAL_DIR), $(CLIENT_CRIMINAL_FILES))
+
+# ############################################################################ #
+#						# DIRECTORY DECLARATIONS #							   #
+# ############################################################################ #
 
 LIBFT_DIR = ./0_LIBFT/ 
 MANDATORY_DIR = ./1_minitalk_mandatory/
 BONUS_DIR = ./2_minitalk_bonus/
 DEBUG_DIR = ./3_minitalk_bonus_debug/
+CRIMINAL_DIR = ./9_minitalk_criminal/
 
-MANDATORY = $(addprefix $(MANDATORY_DIR), $(MANDATORY_FILES))
-BONUS = $(addprefix $(BONUS_DIR), $(BONUS_FILES))
-DEBUG = $(addprefix $(DEBUG_DIR), $(DEBUG_FILES))
+# ############################################################################ #
+#						# END_FILES DECLARATIONS #							   #
+# ############################################################################ #
 
 NAME = minitalk
-CLIENT = client
-SERVER = server
+SERVERMANDATORY = server
+CLIENTMANDATORY = client
+
+NAME_BONUS = minitalk_bonus
+SERVERBONUS = server_bonus
+CLIENTBONUS = client_bonus
+
+NAME_DEBUG = minitalk_bonus_debug
+SERVERDEBUG = server_debug
+CLIENTDEBUG = client_debug
+
+NAME_CRIMINAL = minitalk_criminal
+SERVERCRIMINAL = server_criminal
+CLIENTCRIMINAL = client_criminal
+
+NAMES =	$(SERVERMANDATORY) $(CLIENTMANDATORY) \
+		$(SERVERBONUS) $(CLIENTBONUS) \
+		$(SERVERDEBUG) $(CLIENTDEBUG) \
+		$(SERVERCRIMINAL) $(CLIENTCRIMINAL)
 
 AR = ./0_LIBFT/libft.a
 
+# ############################################################################ #
+#								# MACROS #									   #
+# ############################################################################ #
+
 CFLAGS = -Wall -Wextra -Werror
 
-CC = gcc
+CC = cc
+
+RM = rm -f
+
+ARMAKE = make -C $(LIBFT_DIR)
+
+# ############################################################################ #
+#							# RULES DECLARATIONS #							   #
+# ############################################################################ #
 
 all: $(NAME)
 
-$(NAME): $(AR) $(SERVER) $(CLIENT)
+$(NAME): $(AR) $(SERVERMANDATORY) $(CLIENTMANDATORY)
 
-$(SERVER):
-	$(CC) $(CFLAGS) $(MANDATORY) $(SERVER_MANDATORY) $(AR) -o $(SERVER)
+$(SERVERMANDATORY):
+	$(CC) $(CFLAGS) $(SERVER_MANDATORY) $(AR) -o $(SERVERMANDATORY)
 
-$(CLIENT):
-	$(CC) $(CFLAGS) $(CLIENT_MANDATORY) $(AR) -o $(CLIENT)
+$(CLIENTMANDATORY):
+	$(CC) $(CFLAGS) $(CLIENT_MANDATORY) $(AR) -o $(CLIENTMANDATORY)
 
 $(AR):
 	make -C $(LIBFT_DIR)
 
-bonus: $(AR) $(BONUS)
-	$(CC) $(CFLAGS) $(BONUS) $(SERVER_BONUS) $(AR) -o $(SERVER)
-	$(CC) $(CFLAGS) $(CLIENT_BONUS) $(AR) -o $(CLIENT)
+# ############################################################################ #
+#								# BONUS #									   #
 
-debug: $(AR) $(DEBUG)
-	$(CC) $(CFLAGS) $(DEBUG) $(SERVER_DEBUG) $(AR) -o $(SERVER)
-	$(CC) $(CFLAGS) $(CLIENT_DEBUG) $(AR) -o $(CLIENT)
+bonus: $(NAME_BONUS)
 
-run: all
-	./$(SERVER) 
-#	./$(SERVER) & ./$(CLIENT) $$!
+$(NAME_BONUS): $(AR) $(SERVERBONUS) $(CLIENTBONUS)
 
-bonusrun: bonus
-	./$(SERVER)
+$(SERVERBONUS):
+	$(CC) $(CFLAGS) $(SERVER_BONUS) $(AR) -o $(SERVERBONUS)
 
-debugrun: debug
-	./$(SERVER)
+$(CLIENTBONUS):
+	$(CC) $(CFLAGS) $(CLIENT_BONUS) $(AR) -o $(CLIENTBONUS)
+
+# ############################################################################ #
+#								# DEBUG #									   #
+
+debug: $(NAME_DEBUG)
+
+$(NAME_DEBUG): $(AR) $(SERVERDEBUG) $(CLIENTDEBUG)
+
+$(SERVERDEBUG):
+	$(CC) $(CFLAGS) $(SERVER_DEBUG) $(AR) -o $(SERVERDEBUG)
+
+$(CLIENTDEBUG):
+	$(CC) $(CFLAGS) $(CLIENT_DEBUG) $(AR) -o $(CLIENTDEBUG)
+
+# ############################################################################ #
+#								# CRIMINAL #									   #
+
+criminal: $(NAME_CRIMINAL)
+
+$(NAME_CRIMINAL): $(AR) $(SERVERCRIMINAL) $(CLIENTCRIMINAL)
+
+$(SERVERCRIMINAL):
+	$(CC) $(CFLAGS) $(SERVER_CRIMINAL) $(AR) -o $(SERVERCRIMINAL)
+
+$(CLIENTCRIMINAL):
+	$(CC) $(CFLAGS) $(CLIENT_CRIMINAL) $(AR) -o $(CLIENTCRIMINAL)
+
+# ############################################################################ #
 
 clean:
-	make -C $(LIBFT_DIR) clean
+	$(ARMAKE) clean
 
 fclean: clean
-	rm -f $(SERVER) $(CLIENT)
-	make -C $(LIBFT_DIR) fclean
+	$(RM) $(NAMES)
+	$(ARMAKE) fclean
 
 re: fclean all
 
-.PHONY: all clean fclean re bonusrun debugrun bonus debug
+# ############################################################################ #
+
+combo: all bonus debug
+
+.PHONY: all clean fclean re bonus debug combo
