When you have at least 1 HP, you are ready to go

--- a/03_MiniTalk/Makefile
+++ b/03_MiniTalk/Makefile
@@ -80,7 +80,7 @@ AR = ./0_LIBFT/libft.a
 #								# MACROS #									   #
 # ############################################################################ #
 
-CFLAGS = -Wall -Wextra -Werror
+CFLAGS = -Wall -Wextra -Werror -g3
 
 CC = cc
 
