😏👌 Updated via Makefile(tm) 😏👌

--- a/00_Utils/Makefile
+++ b/00_Utils/Makefile
@@ -149,16 +149,16 @@ git_fpush:
 git_status:
 	git status
 
-CURSUS_MSG_COMMIT = "😏👌 Updated via Makefile(tm) 😏👌, Commit states:"
+CURSUS_MSG_AUTO = "😏👌 Updated via Makefile(tm) 😏👌, Commit states:"
+DQUOTE = "
 
 git_cursus:
 	@echo "Pushing to _CURSUS (the personal private github)..."
 	git add ../*
 	git status
-	@echo "Commit:"; \
-	read COMMIT; \
-	git commit -m $(CURSUS_MSG_COMMIT) $$(COMMIT)
+	git commit -m "😏👌 Updated via Makefile(tm) 😏👌"
 	git push
+	@echo "For detailing commit, please do git pushing manually. Thank you."
 
 # ############################################################################ #
 #								# PHONY #									   #
