--- a/03_PushSwap/Makefile
+++ b/03_PushSwap/Makefile
@@ -84,6 +84,9 @@ bonus:
 # ############################################################################ #
 #								# CUSTOM #									   #
 
+debug:
+	lldb $(NAME)
+
 string: all
 	./$(NAME) string
 
