--- a/makefile_test/Makefile
+++ b/makefile_test/Makefile
@@ -1,23 +1,131 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: vsyutkin <vsyutkin@student.42.fr>          +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2024/04/16 16:03:36 by vsyutkin          #+#    #+#              #
+#    Updated: 2024/04/16 16:38:03 by vsyutkin         ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 # ############################################################################ #
-#					# VERSIONS UPDATER AND GIT MANAGEMENT #					   #
+#						# PROJECT DIRECTORY DECLARATIONS #					   #
+# ############################################################################ #
+
+# ############################################################################ #
+#						# PROJECT SOURCES DECLARATIONS #					   #
+# ############################################################################ #
+
+# ############################################################################ #
+#						# PROJECT PATH DECLARATIONS #						   #
+# ############################################################################ #
+
+# ############################################################################ #
+#						# PROJECT FILES DECLARATIONS #						   #
+# ############################################################################ #
+
+# ############################################################################ #
+#						# PROJECT END_FILES DECLARATIONS #					   #
+# ############################################################################ #
+
+NAME = no_name_yet.you_suck
+PROGRAM = ./$(NAME)
+
+AR = ./0_LIBFT/libft.a
+
+# ############################################################################ #
+#						# PROJECT MACROS #									   #
+# ############################################################################ #
+
+CFLAGS = -Wall -Wextra -Werror -g3 #-fsanitize=address
+
+CC = cc
+
+RM = rm -f
+
+ARMAKE = make -C $(LIBFT_DIR)
+
+# ############################################################################ #
+#						# PROJECT RULES DECLARATIONS #						   #
+# ############################################################################ #
+
+# all: $(NAME) 
+all: help
+
+$(NAME): $(AR)
+	$(CC) $(CFLAGS) $(FILES) $(AR) -o $(NAME)
+
+$(AR):
+	make -C $(LIBFT_DIR)
+
+clean: clear
+	# $(ARMAKE) clean
+
+fclean: clear clean
+	# $(RM) $(NAME)
+	# $(RM) a.out
+	# $(ARMAKE) fclean
+
+re: clear fclean all
+
+# ############################################################################ #
+#						# PROJECT BONUS #									   #
+
+bonus: clear
+	@echo "No bonus for this project done yet."
+
+# ############################################################################ #
+#						# PROJECT CUSTOM #									   #
+
+clear:
+	clear
+
+# ############################################################################ #
+#						# PROJECT TESTS #									   #
+
+# ############################################################################ #
+#										 # VERSIONS UPDATER AND GIT MANAGEMENT #
 # ############################################################################ #
 
 VERSIONS_DIR = ./release_notes/
 
-
-# variable
+# Variables
 VERSIONS_NUMBER := $(shell cat $(VERSIONS_DIR)versions.txt)
-
 COMMIT_FILE = $(VERSIONS_DIR)commits.txt
-
-COMMIT_ARGS := $(shell cat $(VERSIONS_DIR)last_commit.txt)
-
-ARGUMENT ?= something
-
+COMMIT_ARGS = $(shell cat $(VERSIONS_DIR)last_commit.txt)
 EXIT_NORMINETTE := $(shell norminette > /dev/null; echo $$?)
 
-all: info
+# Make commands in this makefile
+help: info
+	@echo "Available commands: (make <command>)\n"
+	@echo "help\n Display this help message.\n\n"
+	@echo "norminette, git_norminette\n Check norminette.\n\n"
+	@echo "git_cursus\n Use only from _CURSUS directory; \
+	will push all projects to personal GitHub.\n\n"
+	@echo "git_push\n Use only from project directory; \
+	if norminette's OK -> will push the project to git repo \
+	(be it personal git OR vogsphere).\n\n"
+	@echo "git_fpush\n Use only from project directory; \
+	will push the project to git repo without norminette check.\n\n"
+	@echo "git_status\n Display git status.\n\n"
+
+git: help
+
+git_cursus: clear commit git_add git_commit git_gitpush
+
+git_push: clear norminette git_auto
+
+git_fpush: clear git_msg1 git_auto
+#	* *	*
+
 # Release directory and files checker
+checks:
+	@echo "Checking for release notes directory..."
+	@echo "Checking for versions file..."
+	@echo "Checking for commits file..."
+	@echo "Checking for last commit file..."
 ifeq ($(wildcard $(VERSIONS_DIR)),)
 	@echo "Creating release notes directory..."
 	@mkdir $(VERSIONS_DIR)
@@ -39,14 +147,11 @@ endif
 ifeq ($(wildcard $(VERSIONS_DIR)last_commit.txt),)
 	@echo "Creating last commit file..."
 	@echo "0" > $(VERSIONS_DIR)last_commit.txt
-	@echo "Done!"
+	@echo "Done!\t"
 endif
 #	* *	*
 
-git_cursus: commit git_add git_commit git_gitpush
-
-git_push: norminette git_auto
-
+# utils:
 ask:
 	@echo "Please enter your commit message:"
 	@read COMMIT_ARGS; \
@@ -57,6 +162,8 @@ info:
 	@echo "In _CURSUS/ directory, please use 'make git_cursus'"
 	@echo "In projects directory, please use 'make git_push'"
 
+commit: checks ask version_update
+	@echo "v$$(($(VERSIONS_NUMBER) + 1))\n$(COMMIT_ARGS)\n" >> $(COMMIT_FILE)
 
 version_update:
 	@echo "Current version: $(VERSIONS_NUMBER)"
@@ -64,15 +171,6 @@ version_update:
 	@echo $$(($(VERSIONS_NUMBER) + 1)) > $(VERSIONS_DIR)versions.txt
 	@echo "New version: $$(($(VERSIONS_NUMBER) + 1))"
 	@echo "Creating new release note"
-
-git:
-	@echo "norminette"
-	@echo "git_norminette"
-	@echo "git_auto"
-	@echo "git_push"
-	@echo "git_fpush"
-	@echo "git_status"
-	@echo "git_cursus"
 
 norminette:
 	@echo "Checking norminette..."
@@ -86,25 +184,19 @@ endif
 git_norminette:
 	norminette
 
-# DO NOT USE THIS UNLESS YOU'RE SURE
+# DO NOT USE
 git_auto:	fclean commit git_add git_commit git_gitpush
 
 git_msg1:
 	@echo "\n\tPushing without norminette...\n"
 
 git_msg2:
-	@echo "Pushing to _CURSUS (the personal private github)..."
-
-git_fpush: git_msg1 git_auto
-	
-git_status:
-	git status
-
-commit: ask version_update
-	@echo "v$$(($(VERSIONS_NUMBER) + 1))\n$(COMMIT_ARGS)\n" >> $(COMMIT_FILE)
+	@echo "Pushing to _CURSUS (the personal github)..."
 
 # ############################################################################ #
-#					# BASIC GIT COMMANDS #									   #
+#														  # BASIC GIT COMMANDS #
+git_status:
+	git status
 
 git_add:
 	git add *
@@ -116,3 +208,9 @@ git_gitpush:
 	git push
 #																			   #
 # ############################################################################ #
+
+# ############################################################################ #
+#								# PHONY #									   #
+# ############################################################################ #
+
+.PHONY:
