--- a/03_so_long/Makefile
+++ b/03_so_long/Makefile
@@ -1,42 +1,32 @@
-# ############################################################################ #
-#							# SOURCES DECLARATIONS #						   #
-# ############################################################################ #
-
-OPERANDS_FILES =	push.c \
-					swap.c \
-					rotate.c \
-					reverse.c
-
-PROTECTIONS_FILES =	check.c \
-					dquote.c \
-					error.c \
-
-PUSHSWAP_FILES =	list.c \
-					list_utils.c \
-					pushswap.c \
-					setup.c \
-					setup_utils.c \
-					solve_0.c \
-					solve_three.c \
-					sorted.c \
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: vsyutkin <vsyutkin@student.42.fr>          +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2024/04/16 16:03:36 by vsyutkin          #+#    #+#              #
+#    Updated: 2024/04/17 10:10:04 by vsyutkin         ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
 
 # ############################################################################ #
-#							# PATH DECLARATIONS #							   #
-# ############################################################################ #
-
-OPERANDS_MANDATORY = $(addprefix $(OPERANDS_DIR), $(OPERANDS_FILES))
-PROTECTIONS_MANDATORY = $(addprefix $(PROTECTIONS_DIR), $(PROTECTIONS_FILES))
-PUSHSWAP_MANDATORY = $(addprefix $(PUSHSWAP_DIR), $(PUSHSWAP_FILES))
-
-# ############################################################################ #
-#						# DIRECTORY DECLARATIONS #							   #
+#						# PROJECT DIRECTORY DECLARATIONS #					   #
 # ############################################################################ #
 
 LIBFT_DIR = ./0_LIBFT/
 MLX_DIR = ./1_MLX42/
 
 # ############################################################################ #
-#						# END_FILES DECLARATIONS #							   #
+#						# PROJECT SOURCES DECLARATIONS #					   #
+# ############################################################################ #
+
+# ############################################################################ #
+#						# PROJECT PATH DECLARATIONS #						   #
+# ############################################################################ #
+
+# ############################################################################ #
+#						# PROJECT FILES DECLARATIONS #						   #
 # ############################################################################ #
 
 NAME = so_long
@@ -46,10 +36,19 @@ AR = ./0_LIBFT/libft.a
 MLX42 = ./1_MLX42/build/libmlx42.a
 
 # ############################################################################ #
-#								# MACROS #									   #
+#						# PROJECT END_FILES DECLARATIONS #					   #
 # ############################################################################ #
 
-CFLAGS = -Wall -Wextra -Werror -g3
+NAME = no_name_yet.you_suck
+PROGRAM = ./$(NAME)
+
+AR = ./0_LIBFT/libft.a
+
+# ############################################################################ #
+#						# PROJECT MACROS #									   #
+# ############################################################################ #
+
+CFLAGS = -Wall -Wextra -Werror -g3 #-fsanitize=address
 
 CC = cc
 
@@ -58,123 +57,179 @@ RM = rm -f
 ARMAKE = make -C $(LIBFT_DIR)
 
 # ############################################################################ #
-#							# RULES DECLARATIONS #							   #
+#						# PROJECT RULES DECLARATIONS #						   #
 # ############################################################################ #
 
-all: libmlx42 $(NAME)
+# all: $(NAME) 
+all: libmlx42 help
 
 libmlx42:
 	@cmake $(LIBMLX) -B $(LIBMLX)/build && make -C $(LIBMLX)/build -j4
 
-$(NAME): $(AR) $(MLX42) $(PUSHSWAPMANDATORY)
-
-$(PUSHSWAPMANDATORY):
-	$(CC) $(CFLAGS) $(OPERANDS_MANDATORY) $(PROTECTIONS_MANDATORY) $(PUSHSWAP_MANDATORY) $(AR) -o $(NAME)
+$(NAME): $(AR)
+	$(CC) $(CFLAGS) $(FILES) $(AR) -o $(NAME)
 
 $(AR):
 	make -C $(LIBFT_DIR)
 
-# ############################################################################ #
-#								# BONUS #									   #
-
-bonus: 
-	@echo "No bonus for this project done yet."
-
-# ############################################################################ #
-#								# CUSTOM #									   #
-
-debug:
-	lldb $(NAME)
-
-string: all
-	./$(NAME) string
-
-strings: all
-	./$(NAME) strings
-
-3order: all
-	./$(NAME) 0 1 2
-
-3ordernot: all
-	./$(NAME) 2 0 1
-
-5order: all
-	./$(NAME) 0 1 2 3 4
-
-5ordernot: all
-	./$(NAME) -101 42 -42 0 101
-
-100: all
-	./$(NAME) $(100)
-# ARG=`ruby -e "puts (0..99).to_a.shuffle.join(' ')"`; ./$(NAME) $${ARG}
-
-500: all
-	./$(NAME) $(500)
-# ARG=`ruby -e "puts (0..499).to_a.shuffle.join(' ')"`; ./$(NAME) $${ARG}
-
-# ############################################################################ #
-
-clean:
+clean: clear
 	$(ARMAKE) clean
 	$(RM) $(MLX_DIR)build
 
-fclean: clean
-	$(RM) $(NAMES)
+fclean: clear clean
+	$(RM) $(NAME)
+	$(RM) a.out
 	$(ARMAKE) fclean
 
-re: fclean all
+re: clear fclean all
 
 # ############################################################################ #
-#							# SUBMITTING #									   #
+#						# PROJECT BONUS #									   #
+
+bonus: clear
+	@echo "No bonus for this project done yet."
+
+# ############################################################################ #
+#						# PROJECT CUSTOM #									   #
+
+clear:
+	clear
+
+# ############################################################################ #
+#						# PROJECT TESTS #									   #
+
+# ############################################################################ #
+#										 # VERSIONS UPDATER AND GIT MANAGEMENT #
 # ############################################################################ #
 
-git:
-	@echo "norminette"
-	@echo "git_norminette"
-	@echo "git_auto"
-	@echo "git_push"
-	@echo "git_fpush"
-	@echo "git_status"
-	@echo "git_cursus"
+VERSIONS_DIR = ./release_notes/
+
+# Variables
+VERSIONS_NUMBER := $(shell cat $(VERSIONS_DIR)versions.txt)
+COMMIT_FILE = $(VERSIONS_DIR)commits.txt
+COMMIT_ARGS = $(shell cat $(VERSIONS_DIR)last_commit.txt)
+EXIT_NORMINETTE := $(shell norminette > /dev/null; echo $$?)
+
+# Make commands in this makefile
+help: info
+	@echo "Available commands: (make <command>)\n"
+	@echo "help\n Display this help message.\n\n"
+	@echo "norminette, git_norminette\n Check norminette.\n\n"
+	@echo "git_cursus\n Use only from _CURSUS directory; \
+	will push all projects to personal GitHub.\n\n"
+	@echo "git_push\n Use only from project directory; \
+	if norminette's OK -> will push the project to git repo \
+	(be it personal git OR vogsphere).\n\n"
+	@echo "git_fpush\n Use only from project directory; \
+	will push the project to git repo without norminette check.\n\n"
+	@echo "git_status\n Display git status.\n\n"
+
+git: help
+
+git_cursus: clear commit git_add git_commit git_gitpush
+
+git_push: clear norminette
+
+git_fpush: clear git_msg1 git_auto
+#	* *	*
+
+# Release directory and files checker
+checks:
+	@echo "Checking for release notes directory..."
+	@echo "Checking for versions file..."
+	@echo "Checking for commits file..."
+	@echo "Checking for last commit file..."
+ifeq ($(wildcard $(VERSIONS_DIR)),)
+	@echo "Creating release notes directory..."
+	@mkdir $(VERSIONS_DIR)
+	@echo "Done!"
+endif
+
+ifeq ($(wildcard $(VERSIONS_DIR)versions.txt),)
+	@echo "Creating versions file..."
+	@echo "0" > $(VERSIONS_DIR)versions.txt
+	@echo "Done!"
+endif
+
+ifeq ($(wildcard $(VERSIONS_DIR)commits.txt),)
+	@echo "Creating commits file..."
+	@echo "\t\t\t$(NAME) release notes:" > $(VERSIONS_DIR)commits.txt
+	@echo "Done!"
+endif
+
+ifeq ($(wildcard $(VERSIONS_DIR)last_commit.txt),)
+	@echo "Creating last commit file..."
+	@echo "0" > $(VERSIONS_DIR)last_commit.txt
+	@echo "Done!\t"
+endif
+#	* *	*
+
+# utils:
+ask:
+	@echo "Please enter your commit message:"
+	@read COMMIT_ARGS; \
+	echo $$COMMIT_ARGS > $(VERSIONS_DIR)last_commit.txt
+
+info:
+	@echo "This makefile is only for managing git!"
+	@echo "In _CURSUS/ directory, please use 'make git_cursus'"
+	@echo "In projects directory, please use 'make git_push'"
+
+commit: checks ask version_update
+	@echo "v$$(($(VERSIONS_NUMBER) + 1))\n$(COMMIT_ARGS)\n" >> $(COMMIT_FILE)
+
+version_update:
+	@echo "Current version: $(VERSIONS_NUMBER)"
+	@echo "Incrementing version"
+	@echo $$(($(VERSIONS_NUMBER) + 1)) > $(VERSIONS_DIR)versions.txt
+	@echo "New version: $$(($(VERSIONS_NUMBER) + 1))"
+	@echo "Creating new release note"
 
 norminette:
-	norminette
+	@echo "Checking norminette..."
+ifeq ($(EXIT_NORMINETTE), 0)
+	make git_auto
+else
+	@echo "Norminette failed, I presume you are plenty of MAJOR SKILL ISSUE.\n\
+	Here's what you have to fix:"
+	norminette | grep -v 'OK' 
+endif
 
 git_norminette:
 	norminette
 
-# DO NOT USE THIS UNLESS YOU'RE SURE
-git_auto:	fclean
-	git add *
-	git commit -m "😏👌 Updated via Makefile(tm) 😏👌"
-	git push
-
-git_push:
-	@echo Pushing if norminette OK...
-	./norminette_before_push.sh
+# DO NOT USE
+git_auto:	fclean commit git_add git_commit git_gitpush
 
 git_msg1:
 	@echo "\n\tPushing without norminette...\n"
 
-git_fpush: git_msg1 git_auto
-	
+git_msg2:
+	@echo "Pushing to _CURSUS (the personal github)..."
+
+# ############################################################################ #
+#														  # BASIC GIT COMMANDS #
 git_status:
 	git status
 
-git_cursus:
-	@echo "Pushing to _CURSUS (the personal private github)..."
-	git add ../*
-	git status
-	git commit -m "😏👌 Updated via Makefile(tm) 😏👌"
+git_add:
+	git add *
+
+git_commit:
+	git commit -m "v$$(($(VERSIONS_NUMBER) + 1)) $(COMMIT_ARGS)"
+
+git_gitpush:
 	git push
-	@echo "\n\tFor detailing commit, please do git pushing manually. Thank you."
+#																			   #
+# ############################################################################ #
 
 # ############################################################################ #
 #								# PHONY #									   #
 # ############################################################################ #
 
-.PHONY: all clean fclean re bonus debug combo norminette \
-		git git_norminette git_auto git_push git_fpush git_status git_cursus
+.PHONY: all clean fclean re bonus clear help git git_cursus git_push git_fpush \
+git_status git_add git_commit git_gitpush norminette git_norminette git_auto \
+git_msg1 git_msg2
 # .PHONY is used to declare phony targets. When a target is phony, it will
 # run the target rather do something to a file. 
 # 	Check "Makefile Implicit Rules - Phony" for more info.
